[tool.poetry]
name = "convexgating"
version = "1.0.0"  # <<COOKIETEMPLE_FORCE_BUMP>>
description = "ConvexGating is a Python tool to infer optimal gating strategies for flow cytometry and cyTOF data."
authors = ["Vincent Friedrich <vf2101@online.de>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/buettnerlab/convexgating"
repository = "https://github.com/buettnerlab/convexgating"
documentation = "https://convexgating.readthedocs.io"
packages = [
    { include = "convexgating" },
]
classifiers = [
   # "Programming Language :: Python :: 3.7",
   #"Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    #"Programming Language :: Python :: 3.10",
    ]
exclude = ["README.rst"]

#dependencies = [
#"python ^3.7.0",
#"click >=8.0.0",
#"rich >=10.3.0",
#"PyYAML >=5.4.1",
#"numpy ==1.19.5",
#"pandas",
#"seaborn",
#"matplotlib",
#"numba",
#"scanpy >=1.5",
#"anndata >=0.7.2",
#"scipy",
#"scikit-learn",
#"scikit-misc",
#"umap-learn",
#"pydot",
#"python-igraph",
#"torch ==1.7.1",
#"tqdm",
#"tk"]






[tool.poetry.dependencies]
python = ">=3.9,<3.11"
#python = ">=3.8.0"
anndata = "==0.10.5.post1"
array-api-compat = "==1.6"
click = "==8.1.7"
contourpy = "==1.1.1"
cycler = "==0.12.1"
fonttools = "==4.51.0"
get-annotations = "==0.1.2"
h5py = "==3.11.0"
igraph = "==0.11.4"
joblib = "==1.4.0"
kiwisolver = "==1.4.5"
llvmlite = "==0.39.1"
markdown-it-py = "==3.0.0"
matplotlib = "==3.6.3"
matplotlib-venn = "==0.11.10"
mdurl = "==0.1.2"
natsort = "==8.4.0"
networkx = "==3.2.1"
numba = "==0.56.4"
numpy = ">=1.19.5"
packaging = "==24.0"
pandas = "==1.4.4"
patsy = "==0.5.6"
pillow = "==10.3.0"
pydot = "==2.0.0"
pynndescent = "==0.5.12"
pyparsing = "==3.1.2"
python-dateutil = "==2.9.0.post0"
python-igraph = "==0.11.4"
pytz = "==2024.1"
pywget = "==0.31"
rich = "==13.7.1"
scanpy = "==1.9.6"
scikit-learn = "==1.4.2"
scikit-misc = "==0.1.4"
scipy = "==1.10.1"
seaborn = "==0.12.2"
session-info = "==1.0.0"
statsmodels = ">=0.14.1"
stdlib-list = "==0.10.0"
texttable = "==1.7.0"
threadpoolctl = "==3.4.0"
tk = "==0.1.0"
torch = "==1.7.1"
tqdm = "==4.66.2"
typing-extensions = "==4.11.0"
umap-learn = "==0.5.6"


#python = ">=3.8.0"
#click = ">=8.0.0"
#rich = ">=10.3.0"
#PyYAML = ">=5.4.1"
#numpy = "==1.19.5"
#pandas = ">=1.3.0"
#seaborn = ">=0.10.0"
#matplotlib = ">=3.5.0"
#torch = "==1.7.1"
#scanpy = ">=1.5"
#numba = ">=0.11.0"
#anndata = ">=0.7.2"
#scipy = ">=1.6.0"
#scikit-learn = ">=1.1.1"
#scikit-misc = ">=0.1.3"
#umap-learn = ">=0.5.1"
#pydot = ">=1.4.1"
#python-igraph = ">=0.9.11"
#tqdm = ">=4.62.0"
#tk = ">=0.1.0"
#h5py "<3




[tool.poetry.dev-dependencies]
pytest = ">=6.2.3"
coverage = {extras = ["toml"], version = ">=5.3"}
safety = ">=1.9.0"
typeguard = ">=2.12.0"
xdoctest = {extras = ["colors"], version = ">=0.15.0"}
sphinx = ">=4.0.2"
sphinx-autobuild = ">=2021.3.14"
pre-commit = ">=2.11.1"
flake8 = ">=3.8.4"
black = ">=20.8b1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.4.3"
flake8-docstrings = ">=1.5.0"
flake8-rst-docstrings = ">=0.2.3"
pep8-naming = ">=0.11.1"
darglint = ">=1.5.8"
pre-commit-hooks = ">=4.0.1"
sphinx-rtd-theme = ">=0.5.0"
sphinx-click = ">=3.0.0"
Pygments = ">=2.8.1"
#types-pkg-resources = ">=0.1.2"
types-requests = ">=2.25.2"
types-attrs = ">=19.1.0"
sphinx-rtd-dark-mode = ">=1.2.3"
Jinja2 = ">=3.0.1"
mypy = ">=0.910"
pyupgrade = ">=2.31.0"

[tool.poetry.scripts]
convexgating = "convexgating.__main__:main"

[tool.black]
line-length = 120

[tool.mypy]
strict = false
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true

[tool.isort]
multi_line_output=3
include_trailing_comma=true
balanced_wrapping=true
line_length=120
profile = "black"

[tool.coverage.paths]
source = ["convexgating", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["convexgating"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
